Front navbar and installing additional fonts

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,13 @@
+@font-face {
+  font-family: Montserrat;
+  src: url('../public/assets/fonts/MontserratAlternates-Medium.ttf') format('truetype');
+}
+
 @import "tailwindcss";
+
+@theme {
+  --font-montserrat: 'Montserrat', 'sans-serif'
+}
 @plugin "daisyui" {
   themes:  night --default;
 }
