Product Card component and service

--- a/src/app/store-front/pages/home-page/home-page.component.html
+++ b/src/app/store-front/pages/home-page/home-page.component.html
@@ -1,10 +1,16 @@
 <h1 class="text-3xl font-bold font-montserrat">Every product</h1>
 <h2 class="text-xl mb-5">For all tastes</h2>
 
+@if (productsResource.hasValue()) {
 <div
   class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 mt-2 gap-3"
 >
-  <product-card />
-  <product-card />
-  <product-card />
+  @for (product of productsResource.value().products ; track product.id) {
+
+  <product-card [product]="product" />
+  }
 </div>
+
+} @else {
+<p>There is no products</p>
+}
