--- a/src/app/products/components/product-card/product-card.component.html
+++ b/src/app/products/components/product-card/product-card.component.html
@@ -1,19 +1,18 @@
 <div class="card bg-base-100 shadow-sm animate-fadeIn">
   <figure class="px-10 pt-10">
     <img
-      src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
-      alt="Shoes"
+      [src]="product().images | productImage"
+      [alt]="product().title"
       class="rounded-xl"
     />
   </figure>
   <div class="card-body items-center text-center">
-    <h2 class="card-title">Card Title</h2>
-    <p>
-      A card component has a figure, a body part, and inside body there are
-      title and actions parts
-    </p>
+    <h2 class="card-title font-montserrat text-accent text-lg">
+      {{ product().title }}
+    </h2>
+    <p>{{ product().description | slice : 0 : 70 }}</p>
     <div class="card-actions">
-      <a class="link link-accent" [routerLink]="['/product', 't-shirt']"
+      <a class="link link-accent" [routerLink]="['/product', product().slug]"
         >More</a
       >
     </div>
