--- a/src/app/store-front/pages/product-page/product-page.component.html
+++ b/src/app/store-front/pages/product-page/product-page.component.html
@@ -9,6 +9,7 @@
 
 <div class="grid grid-cols-1 sm:grid-cols-2 gap-3">
   <!-- Images -->
+  <product-carousel [images]="productResource.value().images" />
   <div>
     <h2 class="text-2xl font-bold font-montserrat">
       {{ productResource.value().title }}
