--- a/src/app/store-front/components/front-navbar/front-navbar.component.html
+++ b/src/app/store-front/components/front-navbar/front-navbar.component.html
@@ -72,7 +72,7 @@
       </li>
       <li>
         <a
-          routerLink="/gender/kids"
+          routerLink="/gender/kid"
           class="btn btn-ghost"
           routerLinkActive="text-secondary"
           >Kids</a
