--- a/src/app/admin-dashboard/pages/products-admin-page/products-admin-page.component.html
+++ b/src/app/admin-dashboard/pages/products-admin-page/products-admin-page.component.html
@@ -1,1 +1,29 @@
-<p>products-admin-page works!</p>,
+<h1 class="text-2xl font-bold">Products list</h1>
+<h3 class="text-lg">
+  Products total count
+  <span class="text-accent">{{ productsResource.value()?.count }}</span>
+</h3>
+
+<div class="divider"></div>
+
+<div class="flex gap-2 items-center h-20">
+  <app-pagination
+    [totalPages]="productsResource.value()?.pages ?? 0"
+    [currentPage]="paginationService.currentPage()"
+  />
+
+  <select
+    class="select select-bordered w-32"
+    #selectPerPage
+    (change)="productsPerPage.set(+selectPerPage.value)"
+  >
+    <option value="10">10</option>
+    <option value="20">20</option>
+    <option value="50">50</option>
+    <option value="100">100</option>
+  </select>
+</div>
+
+<!-- List -->
+
+<product-table [products]="productsResource.value()?.products ?? []" />
