--- a/src/app/store-front/components/front-navbar/front-navbar.component.html
+++ b/src/app/store-front/components/front-navbar/front-navbar.component.html
@@ -81,14 +81,22 @@
     </ul>
   </div>
   <div class="navbar-end gap-4">
+    @if (authService.isAdmin()) {
+    <a routerLink="/admin" class="btn text-accent">Admin Panel</a>
+    }
+    <!-- -->
     @if (authService.authStatus() === 'authenticated') {
     <button class="btn btn-ghost">{{ authService.user()?.fullName }}</button>
     <button class="btn btn-sm btn-error" (click)="authService.logout()">
       Logout
     </button>
-    } @else if (authService.authStatus() === 'not-authenticated') {
+    }
+    <!-- -->
+    @else if (authService.authStatus() === 'not-authenticated') {
     <a class="btn btn-secondary" routerLink="/auth/login">Login</a>
-    } @else {
+    }
+    <!-- -->
+    @else {
     <a class="btn btn-ghost">...</a>
     }
   </div>
