--- a/src/app/admin-dashboard/pages/products-admin-page/products-admin-page.component.html
+++ b/src/app/admin-dashboard/pages/products-admin-page/products-admin-page.component.html
@@ -22,6 +22,12 @@
     <option value="50">50</option>
     <option value="100">100</option>
   </select>
+
+  <div class="flex flex-1">
+    <button class="btn btn-primary" routerLink="/admin/products/new">
+      New product
+    </button>
+  </div>
 </div>
 
 <!-- List -->
